--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "5.2.3",
+    "com.unity.2d.animation": "4.1.1",
+    "com.unity.2d.common": "3.0.0",
     "com.unity.2d.pixel-perfect": "4.0.1",
-    "com.unity.2d.psdimporter": "4.3.0",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.3.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.16",
