--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Packages/packages-lock.json
 Packages/packages-lock.json
+/SwitchIL2CPPCache
+/SwitchIL2CPPStats
